--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           ><img
             id="MDB-logo"
             src="/images/ZENO-LOGO_LG.png"
-            alt="MDB Logo"
+            alt="Logo"
             draggable="false"
             height="50"
         /></a>
