--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <a class="navbar-brand" href="#"
           ><img
             id="MDB-logo"
-            src="/images/ZENO-LOGO_LG.png"
+            src="images/ZENO-LOGO_LG.png"
             alt="Logo"
             draggable="false"
             height="50"
