--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           </p>
         </div>
         <div class="col-md-5">
-          <img src="/images/systemsPREV.png" alt="img" width="600" height="600" class="mx-auto d-none d-md-block">
+          <img src="images/systemsPREV.png" alt="img" width="600" height="600" class="mx-auto d-none d-md-block">
         </div>
       </div>
   
@@ -152,7 +152,7 @@
           </p>
         </div>
         <div class="col-md-5 order-md-1">
-          <img src="/images/utilityCmdPREV.png" alt="img" width="550" height="550" class="mx-auto d-none d-md-block">
+          <img src="images/utilityCmdPREV.png" alt="img" width="550" height="550" class="mx-auto d-none d-md-block">
         </div>
       </div>
   
@@ -166,7 +166,7 @@
           </p>
         </div>
         <div class="col-md-5">
-          <img src="/images/MODCMD-PREV.png" alt="img" width="600" height="600" class="mx-auto d-none d-md-block">
+          <img src="images/MODCMD-PREV.png" alt="img" width="600" height="600" class="mx-auto d-none d-md-block">
         </div>
       </div>
   
